# Multi-Agent-Expertise-Framework

./: AGENTS.md  CLAUDE.md  FRAMEWORK.md  README.md
.ck/: AGENTIC_WORKFLOW_CONTRACT.md.ck  (+24 more)
tmp/context_generator/: pyproject.toml  test_env_loading.py
tmp/context_generator/context_generator/executions/: __init__.py
tmp/context_generator/context_generator/protocols/: __init__.py
v00-multi-agent-expertise-framework/: .gitignore  AGENTS.md  pyproject.toml
v00-multi-agent-expertise-framework/0_directives/: AGENTS.md
v00-multi-agent-expertise-framework/0_directives/30-tools/: error-handling-strategy.md
v00-multi-agent-expertise-framework/0_directives/50-templates/: build.md
v00-multi-agent-expertise-framework/0_directives/90-output-contracts/: README.md
v00-multi-agent-expertise-framework/1_orchestration/: context_engine.py
v00-multi-agent-expertise-framework/1_orchestration/invocation/: command_pattern.md
v00-multi-agent-expertise-framework/2_executions/: README.md
v00-multi-agent-expertise-framework/__ref__/doe-framework/: clog_perplexity_DOE-framework-ideation_24-DEC-2025.md
v00-multi-agent-expertise-framework/__ref__/expert-framework-drafts/: FRAMEWORK.md  PRODUCTION_ROADMAP.md
v00-multi-agent-expertise-framework/__ref__/expert-framework-reverse-engineered-drafts/: .cursorrules
v00-multi-agent-expertise-framework/demos/01-simple-directive/: README.md
v00-multi-agent-expertise-framework/demos/04-plan-build-improve/: README.md
v00-multi-agent-expertise-framework/demos/05-expertise-validation/: README.md
v00-multi-agent-expertise-framework/src/cli/: memory.py
v00-multi-agent-expertise-framework/src/schemas/: task_queue.schema.json
(+988 files in other folders)
